--- a/Gerenciador De Clientes/Views/Shared/_Layout.cshtml
+++ b/Gerenciador De Clientes/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand text-white">Navbar</a>
+                <a class="navbar-brand text-white">Gerenciador de Clientes</a>
                 <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -20,9 +20,6 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-white active" aria-current="page">Listagem</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white">Cadastro</a>
                         </li>
                     </ul>
                 </div>
