[REFACTOR] - Refatoração da estruturação do projeto

--- a/Gerenciador De Clientes/Views/Gerenciamento/CadastrarCliente.cshtml
+++ b/Gerenciador De Clientes/Views/Gerenciamento/CadastrarCliente.cshtml
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<form asp-action="Cadastrar" asp-controller="Home" method="post" class="container-fluid flex-column p-0">
+<form asp-action="Cadastrar" asp-controller="Gerenciamento" method="post" class="container-fluid flex-column p-0">
     <h5>Dados do Cliente</h5>
 
     <!-- Tipo Pessoa -->
