--- a/Gerenciador De Clientes/Views/Gerenciamento/EditarCliente.cshtml
+++ b/Gerenciador De Clientes/Views/Gerenciamento/EditarCliente.cshtml
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<form asp-action="Editar" asp-controller="Home" method="post" class="container-fluid flex-column p-0">
+<form asp-action="Editar" asp-controller="Gerenciamento" method="post" class="container-fluid flex-column p-0">
     <h5>Dados do Cliente</h5>
     <input type="hidden" name="Id" value="@Model.Id"/>
 
