[STYLE] - Refatoração do frontend das telas Editar e Cadastrar

--- a/Gerenciador De Clientes/Views/Gerenciamento/EditarCliente.cshtml
+++ b/Gerenciador De Clientes/Views/Gerenciamento/EditarCliente.cshtml
@@ -4,20 +4,24 @@
     ViewData["Title"] = "Editar";
 }
 
-<div class="d-flex row w-100 py-4 m-0">
-    <div class="d-flex flex-column col p-0">
+<link href="~/css/pages/gerenciamento.css" rel="stylesheet" />
+
+<div class="info">
+    <div class="box-title">
         <h1>Altere o Cliente</h1>
         <p>
             Preencha os campos a seguir para realizar o cadastro de um usuário.
         </p>
     </div>
-    <div class="d-flex flex-column col-auto h-auto p-0">
+    <div class="box-button">
         <a asp-action="Index" asp-controller="Home" class="btn btn-secondary" onclick="">Voltar</a>
     </div>
 </div>
 
-<form asp-action="Editar" asp-controller="Gerenciamento" method="post" class="container-fluid flex-column p-0">
+<form asp-action="Editar" asp-controller="Gerenciamento" method="post" class="formulario">
     <h5>Dados do Cliente</h5>
+
+    <!-- Id (hidden)--> 
     <input type="hidden" name="Id" value="@Model.Id"/>
 
     <!-- Tipo Pessoa -->
@@ -119,7 +123,7 @@
     </div>
 
 
-    <div class="d-flex w-100 justify-content-end gap-1">
+    <div class="form-buttons">
         <button type="reset" class="btn btn-secondary">Limpar</button>
         <button type="submit" class="btn btn-success">Aplicar Filtros</button>
     </div>
