--- a/Gerenciador De Clientes/Views/Home/Index.cshtml
+++ b/Gerenciador De Clientes/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
         <!-- E-mail -->
         <div class="col p-0">
             <label for="email" class="form-label">E-mail:</label>
-            <input type="email" class="form-control" name="Email" placeholder="E-mail do Cliente">
+            <input type="text" class="form-control" name="Email" placeholder="E-mail do Cliente">
         </div>
 
         <!-- Telefone -->
