--- a/Gerenciador De Clientes/Views/Gerenciamento/CadastrarCliente.cshtml
+++ b/Gerenciador De Clientes/Views/Gerenciamento/CadastrarCliente.cshtml
@@ -2,19 +2,21 @@
     ViewData["Title"] = "Cadastro";
 }
 
-<div class="d-flex row w-100 py-4 m-0">
-    <div class="d-flex flex-column col p-0">
+<link href="~/css/pages/gerenciamento.css" rel="stylesheet" />
+
+<div class="info">
+    <div class="box-title">
         <h1>Adicionar Cliente</h1>
         <p>
             Preencha os campos a seguir para realizar o cadastro de um usuário.
         </p>
     </div>
-    <div class="d-flex flex-column col-auto h-auto p-0">
+    <div class="box-button">
         <a asp-action="Index" asp-controller="Home" class="btn btn-secondary" onclick="">Voltar</a>
     </div>
 </div>
 
-<form asp-action="Cadastrar" asp-controller="Gerenciamento" method="post" class="container-fluid flex-column p-0">
+<form asp-action="Cadastrar" asp-controller="Gerenciamento" method="post" class="formulario">
     <h5>Dados do Cliente</h5>
 
     <!-- Tipo Pessoa -->
@@ -117,7 +119,7 @@
     </div>
 
 
-    <div class="d-flex w-100 justify-content-end gap-1">
+    <div class="form-buttons">
         <button type="reset" class="btn btn-secondary">Limpar</button>
         <button type="submit" class="btn btn-success">Aplicar Filtros</button>
     </div>
