--- a/Gerenciador De Clientes/Views/Shared/_Layout.cshtml
+++ b/Gerenciador De Clientes/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+    <link href="~/css/pages/common.css" rel="stylesheet" />
 </head>
 <body>
     <header>
