--- a/Gerenciador De Clientes/wwwroot/css/pages/home.css
+++ b/Gerenciador De Clientes/wwwroot/css/pages/home.css
@@ -1,32 +1,4 @@
-﻿.info {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: fit-content;
-    padding: 1.5rem 0;
-    margin: 0
-}
-
-.box-title {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    padding: 0;
-}
-
-.box-button {
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
-    width: 20%;
-    height: fit-content;
-    padding: 0;
-}
-
-.btn {
-    width: fit-content !important;
-    height: fit-content !important;
-}
+﻿
 
 .selector-filtros {
     display: flex;
