--- a/Gerenciador De Clientes/Views/Home/Index.cshtml
+++ b/Gerenciador De Clientes/Views/Home/Index.cshtml
@@ -132,7 +132,12 @@
                 <td>@c.Email</td>
                 <td>@c.Telefone</td>
                 <td>@c.DataCadastro</td>
-                <td>@(c.Bloqueado == 1 ? "Sim" : "Não")</td>
+                <td>
+                    <label class="switch">
+                        <input type="checkbox" onchange="bloquear(@c.Id)" @(c.Bloqueado == 1 ? "checked" : "")>
+                        <span class="slider round"></span>
+                    </label>
+                </td>
                 <td>
                     <form asp-action="EditarCliente" asp-controller="Gerenciamento" method="post">
                         <input type="hidden" name="id" value="@c.Id">
@@ -149,6 +154,7 @@
     </ul>
 </nav>
 
+@Html.Hidden("Bloquear", Url.Action("Bloquear", "Gerenciamento"))
 
 <script src="~/js/pagination.js"></script>
 <script>
@@ -205,4 +211,12 @@
         $("#form-filtros-selecionados").submit();
     }
 
+    function bloquear(id){
+        $.ajax({
+            url: $("#Bloquear").val(),
+            data: JSON.stringify(id),
+            contentType: "application/json; charset=utf-8",
+            type: "POST"            
+        });
+    }
 </script>
