--- a/Gerenciador De Clientes/Views/Gerenciamento/EditarCliente.cshtml
+++ b/Gerenciador De Clientes/Views/Gerenciamento/EditarCliente.cshtml
@@ -19,19 +19,13 @@
 </div>
 
 <form asp-action="Editar" asp-controller="Gerenciamento" method="post" class="formulario">
-    <h5>Dados do Cliente</h5>
+    <div class="w-100 mt-2 mb-4">
+        <h5 class="text-black p-0 m-0">Infomações do Cliente</h5>
+        <hr class="text-black-50 p-0 m-0" />
+    </div>
 
     <!-- Id (hidden)--> 
     <input type="hidden" name="Id" value="@Model.Id"/>
-
-    <!-- Tipo Pessoa -->
-    <div class="mb-2">
-        <label for="tipo" class="form-label">Tipo de Pessoa:</label>
-        <select class="form-select" id="tipo" name="Tipo" data-bs-toggle="tooltip" title="Selecione o tipo de Pessoa." required>
-            <option value="1">Pessoa Física</option>
-            <option value="0">Pessoa Jurídica</option>
-        </select>
-    </div>
 
     <!-- Nome/Razão Social -->
     <div class="mb-2">
@@ -57,38 +51,53 @@
         <input type="date" class="form-control" id="dataCadastro" name="DataCadastro" data-bs-toggle="tooltip" title="Selecione o tipo de Pessoa." value="@Model.DataCadastro.ToString("yyyy-MM-dd")" required readonly>
     </div>
 
-    <!-- CPF ou CNPJ -->
+    <div class="w-100 mt-2 mb-4">
+        <h5 class="text-black p-0 m-0">Infomações Pessoais</h5>
+        <hr class="text-black-50 p-0 m-0" />
+    </div>
+
+    <!-- Tipo Pessoa -->
     <div class="mb-2">
+        <label for="tipo" class="form-label">Tipo de Pessoa:</label>
+        <select class="form-select" id="tipo" name="Tipo" data-bs-toggle="tooltip" title="Selecione o tipo de Pessoa." required>
+            <option value="1">Pessoa Física</option>
+            <option value="0">Pessoa Jurídica</option>
+        </select>
+    </div>
+
+
+    <!-- CPF ou CNPJ -->
+    <div>
         <label for="cpfCnpj" class="form-label">CPF:</label>
-        <input type="text" class="form-control" id="cpfCnpj" name="CpfCnpj" data-bs-toggle="tooltip" title="Insira o CPF ou o CNPJ do Cliente." value="@Model.CpfCnpj" required>
+        <input type="text" class="form-control mb-2" id="cpfCnpj" name="CpfCnpj" data-bs-toggle="tooltip" title="Insira o CPF ou o CNPJ do Cliente." value="@Model.CpfCnpj" required>
     </div>
 
     <!-- Inscrição Estadual para Pessoa Física -->
-    <div id="form-check-inscricaoEstadualPessoaFisica" class="form-check form-check-inscricaoEstadualPessoaFisica mb-2">
+    <div id="form-check-inscricaoEstadualPessoaFisica" class="form-check form-check-inscricaoEstadualPessoaFisica">
         <input type="checkbox" class="form-check-input" id="inscricaoEstadualPessoaFisica" data-bs-toggle="tooltip" title="Informe a Incrição Estadual do cliente">
-        <label class="form-check-label" for="inscricaoEstadualPessoaFisica">
+        <label class="form-check-label mb-2" for="inscricaoEstadualPessoaFisica">
             Inscrição Estadual para Pessoa Física
         </label>
     </div>
 
     <!-- Inscrição Estadual -->
-    <div class="mb-2">
+    <div>
         <label for="inscricaoEstadual" class="form-label">Inscrição Estadual</label>
-        <input type="text" class="form-control" id="inscricaoEstadual" name="IncricaoEstadual" data-bs-toggle="tooltip" title="Inscrição Estadual do Cliente, selecionar Isento caso assim for." value="@Model.IncricaoEstadual">
+        <input type="text" class="form-control mb-2" id="inscricaoEstadual" name="IncricaoEstadual" data-bs-toggle="tooltip" title="Inscrição Estadual do Cliente, selecionar Isento caso assim for." value="@Model.IncricaoEstadual">
     </div>
 
     <!-- Isento -->
-    <div id="form-check-isento" class="form-check mb-2">
+    <div id="form-check-isento" class="form-check">
         <input type="checkbox" class="form-check-input" id="isento" name="Isento" data-bs-toggle="tooltip" title="Selecione se for isento de Incrição Estadual" value="1">
-        <label class="form-check-label" for="isento">
+        <label class="form-check-label mb-2" for="isento">
             Isento
         </label>
     </div>
 
     <!-- Gênero -->
-    <div class="mb-2">
+    <div>
         <label for="genero" class="form-label">Gênero:</label>
-        <select class="form-select" id="genero" name="Genero" data-bs-toggle="tooltip" title="Selecione o gênero do Cliente." value="@Model.Genero">
+        <select class="form-select mb-2" id="genero" name="Genero" data-bs-toggle="tooltip" title="Selecione o gênero do Cliente." value="@Model.Genero">
             <option value="0">Selecione uma opção</option>
             <option value="1">Masculino</option>
             <option value="2">Feminino</option>
@@ -97,9 +106,14 @@
     </div>
 
     <!-- Data de Nascimeto -->
-    <div class="mb-2">
+    <div>
         <label for="dataNascimento" class="form-label">Data de Nascimento:</label>
-        <input type="date" class="form-control" id="dataNascimento" name="DataNascimento" data-bs-toggle="tooltip" title="Data de nascimento do Cliente." value="@Model.DataNascimento.ToString("yyyy-MM-dd")">
+        <input type="date" class="form-control mb-2" id="dataNascimento" name="DataNascimento" data-bs-toggle="tooltip" title="Data de nascimento do Cliente." value="@Model.DataNascimento.ToString("yyyy-MM-dd")">
+    </div>
+
+    <div class="w-100 mt-2 mb-4">
+        <h5 class="text-black p-0 m-0">Senha de Acesso</h5>
+        <hr class="text-black-50 p-0 m-0" />
     </div>
 
     <!-- Senha -->
@@ -112,6 +126,11 @@
     <div class="mb-2">
         <label for="confirmacao" class="form-label">Confirmação da Senha:</label>
         <input type="password" minlength="8" maxlength="15" class="form-control" id="confirmacao" name="Confirmacao" data-bs-toggle="tooltip" title="Repita a senha do cliente" value="@Model.Senha" required>
+    </div>
+
+    <div class="w-100 mt-2 mb-4">
+        <h5 class="text-black p-0 m-0">Situação do Cliente</h5>
+        <hr class="text-black-50 p-0 m-0" />
     </div>
 
     <!-- Bloqueado -->
